[package]
name = "repo-analyzer-api"
version = "0.1.0"
edition = "2021"
description = "API service for repo-analyzer to handle S3 uploads"
authors = ["Gokhan Ozturk <gokhaanozturk@gmail.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
web-sys = { version = "0.3", features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "FormData",
  "Blob",
  "File",
  "console"
]}

[profile.release]
lto = true
opt-level = 's'