[package]
name = "repo-analyzer-api"
version = "0.1.0"
edition = "2021"
authors = ["Gokhan Ozturk <gokhaanozturk@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.4", features = ["v4", "js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Request",
  "Response",
  "ResponseInit",
  "Headers",
  "console",
  "Url",
  "UrlSearchParams",
  "FormData",
]

[profile.release]
lto = true
opt-level = 's'